--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.1",
     "react-dom": "^16.8.6",
+    "react-router": "^3.2.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
