--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "customize-cra": "^0.2.12",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.1",
+    "react-cookies": "^0.1.0",
     "react-dom": "^16.8.6",
     "react-router": "^3.2.1",
     "react-scripts": "2.1.8"
@@ -26,5 +27,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "crypto-js": "^3.1.9-1"
+  }
 }
