--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "antd": "^3.16.2",
     "babel-plugin-import": "^1.11.0",
+    "babel-polyfill": "^6.7.4",
+    "console-polyfill": "^0.3.0",
     "customize-cra": "^0.2.12",
+    "es5-shim": "^4.5.13",
+    "eventsource-polyfill": "^0.9.6",
+    "fetch-ie8": "^1.4.0",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.1",
     "react-cookies": "^0.1.0",
