--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "dependencies": {
     "antd": "^3.16.2",
     "babel-plugin-import": "^1.11.0",
-    "babel-polyfill": "^6.7.4",
+    "babel-polyfill": "^6.26.0",
     "console-polyfill": "^0.3.0",
+    "core-js": "^3.0.1",
     "customize-cra": "^0.2.12",
     "es5-shim": "^4.5.13",
+    "es6-promise": "^4.2.6",
     "eventsource-polyfill": "^0.9.6",
-    "fetch-ie8": "^1.4.0",
+    "fetch-detector": "^1.0.1",
+    "fetch-ie8": "^1.5.0",
     "react": "^16.8.6",
+    "react-app-polyfill": "^0.2.2",
     "react-app-rewired": "^2.1.1",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.8.6",
